--- a/Alabama.html
+++ b/Alabama.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<a href="intro.html" id="home">Home</a>
+	<a href="index.html" id="home">Home</a>
 </head>
 <body>
 	<div id="Alabama"><strong>Alabama</strong></div><br>
