--- a/accounting.html
+++ b/accounting.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Introduction</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<a href="intro.html" id="home">Home</a>
+	<a href="index.html" id="home">Home</a>
 </head>
 <body id="home-body">
 
