--- a/Athens-State.html
+++ b/Athens-State.html
@@ -9,7 +9,7 @@
 	<div class="dropdown">
     	<button class="dropbtn">Majors</button>
     	<div class="dropdown-content">
-    		<a href="accounting.html">Accounting</a>
+    		<a href="Accounting.html">Accounting</a>
     		<a href="">Art/Art Studies</a>
     		<a href="">Biology/Biological Sciences</a>
     		<a href="">Business, Management, Marketing, and Related Support Services</a>
